syntax = "proto3";

package api.v1.lottery;

import "proto/api/v1/lottery/ball.proto";
import "proto/api/v1/lottery/game.proto";
import "proto/api/v1/lottery/events.proto";

option go_package = "github.com/g38-lottery-service/internal/generated/api/v1/lottery";

// LotteryService 提供彩票遊戲相關的操作接口
service LotteryService {
  // StartNewRound 開始新一輪遊戲
  rpc StartNewRound(StartNewRoundRequest) returns (StartNewRoundResponse) {}

  // DrawBall 抽取一般球
  rpc DrawBall(DrawBallRequest) returns (DrawBallResponse) {}

  // DrawExtraBall 抽取額外球
  rpc DrawExtraBall(DrawExtraBallRequest) returns (DrawExtraBallResponse) {}

  // DrawJackpotBall 抽取頭獎球
  rpc DrawJackpotBall(DrawJackpotBallRequest) returns (DrawJackpotBallResponse) {}

  // DrawLuckyBall 抽取幸運球
  rpc DrawLuckyBall(DrawLuckyBallRequest) returns (DrawLuckyBallResponse) {}

  // CancelGame 取消遊戲
  rpc CancelGame(CancelGameRequest) returns (GameData) {}

  // GetGameStatus 獲取遊戲狀態
  rpc GetGameStatus(GetGameStatusRequest) returns (GetGameStatusResponse) {}
  
  // StartJackpotRound 開始 JP 回合
  rpc StartJackpotRound(StartJackpotRoundRequest) returns (StartJackpotRoundResponse) {}
  
  // SubscribeGameEvents 訂閱遊戲事件流
  rpc SubscribeGameEvents(SubscribeGameEventsRequest) returns (stream GameEvent) {}
} 